When creating a sub-server that is a sub-domain of it's parent, DNS records for the new domain will be added to the parent's zone.
Added a field on the Website Options page for making a virtual server the default website for its IP address.
Parent virtual server details are now available in sub-server post-creation scripts in the $PARENT_VIRTUALSERVER_ environment variables.
Added --reseller, --no-reseller and --any-reseller flags to list-domains.pl.
Virtual servers can now have IPv6 addresses in addition to v4, on Debian, Ubuntu, Redhat, CentOS and Fedora systems. Virtualmin will configure BIND to add IPv6 address records, and Apache to accept connections to the IPv6 address. All pages that API commands that deal with addresses have new fields and options for an optional IPv6 address.
Added the --purge and --strftime flags to backup-domain.pl, to allow automatic deletion of old backups and date-based backup destinations.
---- Changes since 3.68 ----
Updated the Nag script installer to version 2.3.2, phpMyFAQ to 2.0.13, Wordpress MU to 2.7.1, SugarCRM to 5.2.0d, phpMyAdmin to 3.1.4, MoinMoin to 1.8.3, and Mantis to 1.1.7.
Added a script installer for Redmine 0.8.3, thanks to Nick Orr.
Added buttons to the Manage SSL Certificate page to copy a domain's cert and key to Webmin or Usermin.
Added CPU and hard drive temperatures to the System Statistics page.
SpamAssassin's server filter spamd can now be activated from within Virtualmin, using a new button on the Spam and Virus Scanning page. You can also turn it on with the --enable-spamd flag to the set-spam API script.
After Virtualmin is installed and the master administrator logs in for the first time, a wizard allowing basic configuration of memory and speed tradeoffs will be displayed. This allows the system to be tuned for web, mail or database hosting, depending on how the admin intends it to be used.
ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualmin.