@@ -47,13 +47,13 @@ return (undef, $dom, $user, $pass);
 
 # migration_plesk9_migrate(file, domain, username, create-webmin, template-id,
 #			   ip-address, virtmode, pass, [&parent], [prefix],
-#			   virt-already, [email])
+#			   virt-already, [email], netmask)
 # Actually extract the given Plesk backup, and return the list of domains
 # created.
 sub migration_plesk9_migrate
 {
 local ($file, $dom, $user, $webmin, $template, $ip, $virt, $pass, $parent,
-       $prefix, $virtalready, $email) = @_;
+       $prefix, $virtalready, $email, $netmask) = @_;
 
 # Check for prefix clash
 $prefix ||= &compute_prefix($dom, undef, $parent, 1);
@@ -201,6 +201,7 @@ local $plan = $parent ? &get_plan($parent->{'plan'}) : &get_default_plan();
          'email', $email ? $email : $parent ? $parent->{'email'} : undef,
          'name', !$virt,
          'ip', $ip,
+         'netmask', $netmask,
 	 'dns_ip', $virt || $config{'all_namevirtual'} ? undef
 						       : &get_dns_ip(),
          'virt', $virt,
