@@ -1109,3 +1109,4 @@ Added CPU and hard drive temperatures to the System Statistics page.
 SpamAssassin's server filter spamd can now be activated from within Virtualmin, using a new button on the Spam and Virus Scanning page. You can also turn it on with the --enable-spamd flag to the set-spam API script.
 After Virtualmin is installed and the master administrator logs in for the first time, a wizard allowing basic configuration of memory and speed tradeoffs will be displayed. This allows the system to be tuned for web, mail or database hosting, depending on how the admin intends it to be used.
 ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualmin.
+Netmasks can now be optionally specified for IP allocation ranges, rather than being always inherited from the primary interface's netmask.
